--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!-- Write your HTML in this file -->
+<!doctype html>
+<html>
+<head>
+  <title></title>
+  <link rel="stylesheet" href="style.css">
+</head>
+  <body>
+  <h1>Hello, World!</h1>
+  
+
+
+
+  </body>
+</html>
